# clinic-appointment-system

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTH_ENHANCEMENT_TRACKER.md  CLAUDE.md  CONTRATO_PRESTACAO_SERVICOS.md  CORS_FIX_GUIDE.md  FRONTEND_RENDER_CONFIG.md  IMPLEMENTATION_PLAN.md  Makefile  PROGRESS_AGENDAMENTOS.md  PROJECT_OVERVIEW.md  QUICK_RENDER_CONFIG.md  README.md  docker-compose.prod.yml  docker-compose.worker.yml  docker-compose.yml  frontend-minimal.env  frontend-render.env  render-import.env  render-minimal.env  render.yaml
.claude/: ARCHITECTURE.md  CODE_PATTERNS.md  CONTEXT.md  PRD.md  git-workflow-rules.md
.github/: dependabot.yml  pull_request_template.md
backend/: .env.docker  .env.example  .flake8  Dockerfile  pyproject.toml  render-config.template  requirements.txt  workers.py
backend/src/: main.py
backend/src/application/: __init__.py
backend/src/application/common/: __init__.py  context.py
backend/src/application/dtos/: __init__.py  appointment_dto.py  car_dto.py  client_dto.py  collector_dto.py  driver_dto.py  logistics_package_dto.py  notification_dto.py  patient_document_dto.py  tag_dto.py  user_dto.py
backend/src/application/services/: __init__.py  address_normalization_service.py  appointment_service.py  auth_service.py  car_service.py  client_service.py  collector_service.py  dashboard_analytics_service.py  document_normalization_service.py  driver_service.py  excel_parser_service.py  logistics_package_service.py  notification_manager_service.py  notification_service.py  patient_document_service.py  report_service.py  tag_service.py  task_service.py
backend/src/domain/: __init__.py  base.py
backend/src/domain/entities/: __init__.py  appointment.py  car.py  client.py  collector.py  driver.py  logistics_package.py  notification.py  patient_document.py  tag.py  user.py  user_enhanced.py
backend/src/domain/enums/: __init__.py  user_enums.py
backend/src/domain/repositories/: __init__.py  appointment_repository_interface.py  car_repository_interface.py  client_repository_interface.py  collector_repository_interface.py  driver_repository_interface.py  logistics_package_repository_interface.py  notification_repository_interface.py  patient_document_repository_interface.py  tag_repository_interface.py  user_repository_interface.py
backend/src/domain/services/: token_service.py
backend/src/domain/utils/: __init__.py  cpf.py
backend/src/infrastructure/: config.py  container.py
backend/src/infrastructure/repositories/: __init__.py  appointment_repository.py  car_repository.py  client_repository.py  collector_repository.py  driver_repository.py  logistics_package_repository.py  notification_repository.py  patient_document_repository.py  tag_repository.py  user_repository.py
backend/src/infrastructure/services/: async_notification_service.py  email_service.py  r2_storage_service.py  rate_limiter.py  redis_service.py
backend/src/infrastructure/storage/: r2_client.py
backend/src/infrastructure/templates/: account_blocked.html  admin_notification.html  approval_request.html  base_email.html  password_reset.html  rejection_email.html  verification_email.html  welcome_email.html
backend/src/infrastructure/templates/emails/: account_locked.html  admin_new_user.html  base.html  password_reset.html  rejection.html  verification.html  welcome.html
backend/src/presentation/: exceptions.py
backend/src/presentation/api/: responses.py
backend/src/presentation/api/v1/: router.py
backend/src/presentation/api/v1/endpoints/: admin.py  appointment_documents.py  appointments.py  auth.py  cars.py  clients.py  collectors.py  drivers.py  jobs.py  logistics_packages.py  notifications.py  patient_documents.py  reports.py  tags.py
backend/src/presentation/dependencies/: __init__.py  auth.py  context.py  rate_limit.py  services.py
backend/src/workers/: config.py  normalization_tasks.py
backend/tests/: conftest.py  test_address_normalization.py  test_appointment_api.py  test_appointment_date_filter.py  test_appointment_entity.py  test_appointment_origin.py  test_appointment_repository.py  test_appointment_service.py  test_auth.py  test_client_api.py  test_client_service.py  test_collector_repository.py  test_collector_service.py  test_dashboard_analytics_service.py  test_document_normalization.py  test_excel_parser.py  test_exceptions.py  test_logistics_package_service.py  test_main.py  test_tag_service.py
docs/: APPOINTMENT_IMPLEMENTATION_GUIDE.md  CODE_OF_CONDUCT.md  DEVELOPMENT.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  deployment-environment-config.md  tag-management-plan.md
(+181 files in other folders)
